# Travel-Itinerary-Planning-System-Using-GPTs-as-the-Core

./: README.md  docker-compose.yaml
data/waiting_time/: README.en.md  README.md  inspect_parameters.py  parameter  pyproject.toml
data/waiting_time/prediction_model/: README.md
frontend/app/components/: Cards.tsx  Header.tsx  RecommendedSites.tsx  SiteCard.tsx
frontend/app/sites/: page.tsx
recommend/: requirements.txt
research/: data_time.py  distance_matrix.py  indicator_results_20250911_134203.csv  llm_output.py  pois.json  pyproject.toml  recommended_module.py  routing.py  test_indicators.py  vrptw.py
research/db/site_content_db/: chroma.sqlite3
routing/: distance_matrix.py
